--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #444;
   background-color: #f3f3f3;
   height: 100vh;
@@ -19,14 +19,10 @@ body {
 
 nav {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 2rem;
-}
-
-.welcome {
-  font-size: 2.5rem;
-  font-weight: 500;
+  padding: 0 25%;
 }
 
 .score__input {
@@ -67,11 +63,41 @@ nav {
   outline: none;
   color: #777;
 }
+
+/*** Responsiveness ***/
+
+@media screen and (max-width: 992px) {
+  nav {
+    padding: 0px 5%;
+  }
+}
 /* UI */
 
 .hidden {
   display: none;
   transition: all 1s;
+}
+
+/*** Typography ***/
+
+h1 {
+  font-size: 40px;
+}
+
+.welcome {
+  font-size: 4rem;
+  font-weight: 500;
+  color: #446824;
+}
+
+p {
+  font-size: 12px;
+}
+
+nav p {
+  margin: 20px auto 0px;
+  font-size: 16px;
+  text-align: center;
 }
 /* MAIN */
 .app {
@@ -88,7 +114,7 @@ nav {
   transition: all 1s;
 }
 
-.balance {
+/* .balance {
   grid-column: 1 / span 2;
   display: flex;
   align-items: flex-end;
@@ -110,7 +136,7 @@ nav {
 .balance__value {
   font-size: 4.5rem;
   font-weight: 400;
-}
+} */
 
 /* ADD PLAYERS */
 
@@ -144,6 +170,19 @@ nav {
 
 .add_resetplayers-container {
   text-align: center;
+}
+
+@media screen and (max-width: 375px) {
+  .player__name-input {
+    margin-bottom: 10px;
+    width: 75%;
+  }
+
+  .form__btn--add-player,
+  .lets__play-btn,
+  .player__name-input {
+    width: 75%;
+  }
 }
 
 /* PLAYERS */
@@ -183,6 +222,56 @@ nav {
   text-align: center;
 }
 
+.flex-row {
+  display: flex;
+  width: 100%;
+}
+
+.score__input-container {
+  position: relative;
+  margin: auto;
+  max-width: 20%;
+  display: flex;
+}
+
+.total__score-container {
+  min-width: 20%;
+  text-align: center;
+}
+
+@media screen and (max-width: 730px) {
+  .player__row {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .player__name-container {
+    width: 100%;
+  }
+  .flex-row {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
+    margin: 20px auto 0px;
+  }
+
+  .score__input-container {
+    position: relative;
+    margin: 0px;
+    max-width: 40%;
+    display: flex;
+  }
+
+  .total__score-container {
+    width: auto;
+  }
+
+  .total__score-container {
+    max-width: none;
+  }
+}
+
 /* Formatting colours */
 
 /****/
@@ -192,19 +281,6 @@ nav {
   text-transform: uppercase;
   font-weight: 500;
   color: #666;
-  margin: auto;
-}
-
-/* .movements__type--deposit {
-  background-image: linear-gradient(to top left, #39b385, #9be15d);
-}
-
-.movements__type--withdrawal {
-  background-image: linear-gradient(to top left, #e52a5a, #ff585f);
-} */
-
-.score__input-container {
-  position: relative;
   margin: auto;
 }
 
@@ -331,7 +407,7 @@ h2 {
   cursor: pointer;
   transition: all 0.3s;
   background-image: linear-gradient(to top left, #39b385, #9be15d);
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   /* text-transform: uppercase; */
 }
 
