--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+  --webkit-gradient: linear-gradient(to bottom right, #fdc830, #f37335);
+  --primary-color: #f29f33;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -25,52 +30,16 @@ nav {
   padding: 0 25%;
 }
 
-.score__input {
-  border: 2px solid #84c54b;
-  padding: 0.5rem 0.5rem;
-  font-size: 1.6rem;
-  font-family: inherit;
-  text-align: center;
-  width: 8rem;
-  /* width: 50%; */
-
-  border-radius: 10rem;
-  margin-right: 1rem;
-  margin-left: auto;
-  color: inherit;
-  transition: all 0.3s;
-  text-transform: uppercase;
-  color: #446824;
-}
-
-.login__input::placeholder {
-  color: #bbb;
-}
-
-.login__btn {
-  border: none;
-  background: none;
-  font-size: 2.2rem;
-  color: inherit;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-
-.login__btn:hover,
-.login__btn:focus,
-.btn--sort:hover,
-.btn--sort:focus {
+input {
   outline: none;
-  color: #777;
 }
-
-/*** Responsiveness ***/
 
 @media screen and (max-width: 992px) {
   nav {
     padding: 0px 5%;
   }
 }
+
 /* UI */
 
 .hidden {
@@ -86,8 +55,11 @@ h1 {
 
 .welcome {
   font-size: 4rem;
-  font-weight: 500;
-  color: #446824;
+  font-weight: bolder;
+  color: var(--primary-color);
+  background: var(--webkit-gradient);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 p {
@@ -99,6 +71,7 @@ nav p {
   font-size: 16px;
   text-align: center;
 }
+
 /* MAIN */
 .app {
   position: relative;
@@ -114,30 +87,6 @@ nav p {
   transition: all 1s;
 }
 
-/* .balance {
-  grid-column: 1 / span 2;
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  margin-bottom: 2rem;
-}
-
-.balance__label {
-  font-size: 2.2rem;
-  font-weight: 500;
-  margin-bottom: -0.2rem;
-}
-
-.balance__date {
-  font-size: 1.4rem;
-  color: #888;
-}
-
-.balance__value {
-  font-size: 4.5rem;
-  font-weight: 400;
-} */
-
 /* ADD PLAYERS */
 
 .add__players-container {
@@ -150,7 +99,7 @@ nav p {
 }
 
 .player__name-input {
-  border: 2px solid #84c54b;
+  border: 2px solid var(--primary-color);
   padding: 0.5rem 0.5rem;
   font-size: 1.6rem;
   font-family: inherit;
@@ -160,7 +109,8 @@ nav p {
   margin-right: 1rem;
   margin-left: auto;
   transition: all 0.3s;
-  color: #446824;
+  color: var(--primary-color);
+  outline: none;
 }
 
 .lets__play-btn {
@@ -185,7 +135,7 @@ nav p {
   }
 }
 
-/* PLAYERS */
+/* PLAYERS CONTAINER*/
 .players-container {
   grid-row: 2 / span 3;
   background-color: #fff;
@@ -200,6 +150,25 @@ nav p {
   border-bottom: 1px solid #eee;
 }
 
+.player__row:nth-child(even) {
+  --webkit-gradient: linear-gradient(to bottom right, #00b4db, #0083b0);
+  --primary-color: #429ec8;
+}
+
+.player__row:nth-child(odd) {
+  --webkit-gradient: linear-gradient(to bottom right, #f953c6, #b91d73);
+  --primary-color: #da489d;
+}
+
+/* .player__row:nth-child(4n + 4) {
+
+}
+
+.player__row:nth-child(5n + 5) {
+  --webkit-gradient: linear-gradient(to bottom right, #ed213a, #93291e);
+  --primary-color: #c3332d;
+} */
+
 .player__name-container {
   min-width: 33%;
 }
@@ -209,19 +178,22 @@ nav p {
 }
 
 .player__name {
-  font-size: 1.1rem;
+  font-size: 1.8rem;
+  letter-spacing: 2px;
   text-transform: uppercase;
   font-weight: 500;
   color: #fff;
   padding: 0.1rem 1rem;
   border-radius: 10rem;
   /* margin-right: 2rem; */
-  background-image: linear-gradient(to top left, #39b385, #9be15d);
+  background-image: var(--webkit-gradient);
   /* background-color: pink; */
   min-width: 17px;
   text-align: center;
+  margin-bottom: 10px;
 }
 
+/* Scores */
 .flex-row {
   display: flex;
   width: 100%;
@@ -232,6 +204,24 @@ nav p {
   margin: auto;
   max-width: 20%;
   display: flex;
+}
+
+/* Scores */
+
+.score__input {
+  border: 2px solid var(--primary-color);
+  padding: 0.5rem 0.5rem;
+  font-size: 1.6rem;
+  font-family: inherit;
+  text-align: center;
+  width: 8rem;
+  border-radius: 10rem;
+  margin-right: 1rem;
+  margin-left: auto;
+  color: inherit;
+  transition: all 0.3s;
+  text-transform: uppercase;
+  color: #446824;
 }
 
 .total__score-container {
@@ -248,12 +238,18 @@ nav p {
   .player__name-container {
     width: 100%;
   }
+
   .flex-row {
     display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: space-around;
     margin: 20px auto 0px;
+  }
+
+  .player__name-input {
+    margin: 0px 0px 10px 0px;
+    outline: none;
   }
 
   .score__input-container {
@@ -293,64 +289,6 @@ nav p {
   line-height: 17px;
 }
 
-/* SUMMARY */
-.summary {
-  grid-row: 5 / 6;
-  display: flex;
-  align-items: baseline;
-  padding: 0 0.3rem;
-  margin-top: 1rem;
-}
-
-.summary__label {
-  font-size: 1.2rem;
-  font-weight: 500;
-  text-transform: uppercase;
-  margin-right: 0.8rem;
-}
-
-.summary__value {
-  font-size: 2.2rem;
-  margin-right: 2.5rem;
-}
-
-.summary__value--in,
-.summary__value--interest {
-  color: #66c873;
-}
-
-.summary__value--out {
-  color: #f5465d;
-}
-
-.btn--sort {
-  margin-left: auto;
-  border: none;
-  background: none;
-  font-size: 1.3rem;
-  font-weight: 500;
-  cursor: pointer;
-}
-
-/* OPERATIONS */
-.operation {
-  border-radius: 1rem;
-  padding: 3rem 4rem;
-  color: #333;
-}
-
-.operation--transfer {
-  background-image: linear-gradient(to top left, #ffb003, #ffcb03);
-}
-
-.operation--loan {
-  background-image: linear-gradient(to top left, #39b385, #9be15d);
-}
-
-.operation--close {
-  background-image: linear-gradient(to top left, #e52a5a, #ff585f);
-}
-
 h2 {
   margin-bottom: 1.5rem;
   font-size: 1.7rem;
@@ -365,15 +303,6 @@ h2 {
   grid-template-rows: auto auto;
   gap: 0.4rem 1rem;
 }
-
-/* Exceptions for interst */
-.form.form--loan {
-  grid-template-columns: 2.5fr 1fr 2.5fr;
-}
-.form__label--loan {
-  grid-row: 2;
-}
-/* End exceptions */
 
 .form__input {
   width: 100%;
@@ -391,6 +320,7 @@ h2 {
 .form__input:focus {
   outline: none;
   background-color: rgba(255, 255, 255, 0.6);
+  border: 2px solid var(--primary-color);
 }
 
 .form__label {
@@ -399,14 +329,14 @@ h2 {
 }
 
 .form__btn {
-  border: 2px solid #84c54b;
+  border: 2px solid var(--primary-color);
   border-radius: 100px;
   padding: 0.5rem 1rem;
   font-size: 1.6rem;
   color: #fff;
   cursor: pointer;
   transition: all 0.3s;
-  background-image: linear-gradient(to top left, #39b385, #9be15d);
+  background-image: var(--webkit-gradient);
   font-family: 'Poppins', sans-serif;
   /* text-transform: uppercase; */
 }
