--- a/style.css
+++ b/style.css
@@ -137,10 +137,10 @@ nav p {
 
 /* PLAYERS CONTAINER*/
 .players-container {
-  grid-row: 2 / span 3;
   background-color: #fff;
   border-radius: 1rem;
   overflow: scroll;
+  height: fit-content;
 }
 
 .player__row {
