--- a/style.css
+++ b/style.css
@@ -54,10 +54,12 @@ h1 {
 }
 
 .welcome {
-  font-size: 4rem;
+  font-size: 1.25rem;
   font-weight: bolder;
   color: var(--primary-color);
   background: var(--webkit-gradient);
+  margin: 0px 0px 20px;
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -87,6 +89,50 @@ nav p {
   transition: all 1s;
 }
 
+/*** Modal Window ***/
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 80%;
+  background-color: #fff;
+  padding: 2rem;
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+  transition: all 0.5s;
+  border-radius: 1rem;
+}
+
+.btn-close-modal {
+  text-transform: uppercase;
+  position: absolute;
+  color: #f37335;
+  top: 15px;
+  right: 10px;
+}
+
+.show-modal {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.btn-show-modal {
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
+  z-index: 100;
+  transition: all 0.5s;
+}
 /* ADD PLAYERS */
 
 .add__players-container {
@@ -230,6 +276,10 @@ nav p {
 }
 
 @media screen and (max-width: 730px) {
+  .modal {
+    width: 90%;
+  }
+
   .player__row {
     flex-direction: column;
     text-align: center;
