--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ nav h6 {
 .player__name {
   font-size: 1.5rem;
   letter-spacing: 1px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-weight: 900;
   color: #fff;
   padding: 0.1rem 1rem;
