--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ nav p {
 
 nav h6 {
   font-size: 16px;
+  margin-top: 30px;
   margin-bottom: 10px;
   text-align: center;
 }
@@ -122,6 +123,7 @@ nav h6 {
   top: 10px;
   right: 10px;
   font-size: 11px;
+  margin: 0px;
 }
 
 .show-modal {
