--- a/style.css
+++ b/style.css
@@ -540,4 +540,56 @@ h2 {
 footer {
   margin-top: auto;
   padding: 10px 5%;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+}
+
+footer div {
+  width: 33%;
+  display: flex;
+  justify-content: center;
+}
+
+#credit p {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 8px;
+}
+
+#feedback button {
+  border: none;
+  border-bottom: 2px solid var(--primary-color);
+  outline: none;
+  color: var(--primary-color);
+  font-size: 8px;
+  font-family: 'Poppins', sans-serif;
+}
+
+@media screen and (max-width: 450px) {
+  footer {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+  }
+
+  footer div {
+    width: 100%;
+  }
+
+  #title {
+    order: 1;
+  }
+
+  #credit {
+    margin: 5px 0px;
+    order: 2;
+    width: 50%;
+  }
+
+  #feedback {
+    order: 3;
+    width: 50%;
+  }
 }
