--- a/style.css
+++ b/style.css
@@ -541,15 +541,28 @@ footer {
   margin-top: auto;
   padding: 10px 5%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-content: center;
   align-items: center;
 }
 
 footer div {
-  width: 33%;
+  width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.subfooter {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+#credit,
+#feedback {
+  width: auto;
+  font-size: 8px;
+  font-family: 'Poppins', sans-serif;
 }
 
 #credit p {
@@ -562,8 +575,6 @@ footer div {
   border-bottom: 2px solid var(--primary-color); */
   outline: none;
   color: var(--primary-color);
-  font-size: 8px;
-  font-family: 'Poppins', sans-serif;
 }
 
 @media screen and (max-width: 450px) {
@@ -576,20 +587,5 @@ footer div {
 
   footer div {
     width: 100%;
-  }
-
-  #title {
-    order: 1;
-  }
-
-  #credit {
-    margin: 5px 0px;
-    order: 2;
-    width: 50%;
-  }
-
-  #feedback {
-    order: 3;
-    width: 50%;
   }
 }
